[tool.poetry]
name = "sf_jam"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
streamlit = "^1.41.1"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
poethepoet = "^0.24.0"

[tool.poe.tasks]
format = [
    { cmd = "black src tests" },
    { cmd = "isort src tests" }
]
lint = "flake8 src tests"
test = "pytest tests/"
check = ["format", "lint", "test"]
run = "python src/sf_jam/main.py"
app = "poetry run streamlit run src/sf_jam/app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"